Refactor code from MinerApplication to ConsoleApplication

--- a/MultiMiner.TUI/MultiMiner.TUI.csproj
+++ b/MultiMiner.TUI/MultiMiner.TUI.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleApplication.cs" />
     <Compile Include="MinerApplication.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
