--- a/MultiMiner.Xgminer.Discovery/MultiMiner.Xgminer.Discovery.csproj
+++ b/MultiMiner.Xgminer.Discovery/MultiMiner.Xgminer.Discovery.csproj
@@ -13,6 +13,7 @@
     <FileAlignment>512</FileAlignment>
     <ProductVersion>12.0.0</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
