--- a/MultiMiner.MultipoolApi/MultiMiner.MultipoolApi.csproj
+++ b/MultiMiner.MultipoolApi/MultiMiner.MultipoolApi.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>MultiMiner.MultipoolApi</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
