--- a/MultiMiner.TUI/MultiMiner.TUI.csproj
+++ b/MultiMiner.TUI/MultiMiner.TUI.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\CommandNames.cs" />
+    <Compile Include="Data\PoolListEntry.cs" />
     <Compile Include="Data\ScreenNames.cs" />
     <Compile Include="MinerApplication.cs" />
     <Compile Include="Program.cs" />
