Refactor command handling into separate classes

--- a/MultiMiner.TUI/MultiMiner.TUI.csproj
+++ b/MultiMiner.TUI/MultiMiner.TUI.csproj
@@ -41,7 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\DeviceCommand.cs" />
+    <Compile Include="Commands\NetworkCommand.cs" />
+    <Compile Include="Commands\NotificationsCommand.cs" />
+    <Compile Include="Commands\ScreenCommand.cs" />
+    <Compile Include="Commands\Settings\MobileMinerCommand.cs" />
+    <Compile Include="Commands\StrategiesCommand.cs" />
+    <Compile Include="Commands\SwitchAllCommand.cs" />
     <Compile Include="Data\CommandNames.cs" />
+    <Compile Include="Commands\PoolCommand.cs" />
     <Compile Include="Data\PoolListEntry.cs" />
     <Compile Include="Data\ScreenNames.cs" />
     <Compile Include="Data\SettingNames.cs" />
