--- a/MultiMiner.TUI/MultiMiner.TUI.csproj
+++ b/MultiMiner.TUI/MultiMiner.TUI.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Commands\Settings\CoinApiCommand.cs" />
     <Compile Include="Commands\Settings\CoinWarzCommand.cs" />
     <Compile Include="Commands\Settings\MobileMinerCommand.cs" />
+    <Compile Include="Commands\Settings\PerksCommand.cs" />
     <Compile Include="Commands\Settings\WhatMineCommand.cs" />
     <Compile Include="Commands\StrategiesCommand.cs" />
     <Compile Include="Commands\SwitchAllCommand.cs" />
