--- a/MultiMiner.UX.Tests/MultiMiner.UX.Tests.csproj
+++ b/MultiMiner.UX.Tests/MultiMiner.UX.Tests.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DateTimeExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
