Automatically supply the #skipcbcheck fragment when mining NiceHash * Fix fragments passed to BFGMiner - unescape the URI, BFGMiner doesn't look for %23 only #

--- a/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
+++ b/MultiMiner.Xgminer/MultiMiner.Xgminer.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Data\Device\DevicePlatform.cs" />
     <Compile Include="Data\KnownAlgorithm.cs" />
     <Compile Include="Data\KnownAlgorithms.cs" />
+    <Compile Include="Data\PoolFeatures.cs" />
     <Compile Include="LaunchFailedArgs.cs" />
     <Compile Include="LogLaunchArgs.cs" />
     <Compile Include="MinerLaunchException.cs" />
