--- a/MultiMiner.UX.Tests/MultiMiner.UX.Tests.csproj
+++ b/MultiMiner.UX.Tests/MultiMiner.UX.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="DateTimeExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringExtensionsTests.cs" />
+    <Compile Include="DeviceViewModelTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiMiner.UX\MultiMiner.UX.csproj">
