Work around Network Devices that do not return a "Hash Method" key in their response to the "COIN" API request * see: https://github.com/nwoolls/MultiMiner/issues/336 * see: https://github.com/ckolivas/cgminer/blob/master/API-README

--- a/MultiMiner.Xgminer.Api.Tests/MultiMiner.Xgminer.Api.Tests.csproj
+++ b/MultiMiner.Xgminer.Api.Tests/MultiMiner.Xgminer.Api.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="DeviceInformationParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="NetworkCoinInformationParserTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiMiner.Xgminer.Api\MultiMiner.Xgminer.Api.csproj">
