--- a/MultiMiner.Engine.Tests/MultiMiner.Engine.Tests.csproj
+++ b/MultiMiner.Engine.Tests/MultiMiner.Engine.Tests.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="InstallerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MultiMiner.Engine\MultiMiner.Engine.csproj">
